--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,9 +4,9 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/ic_bb_logo_front"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@mipmap/ic_bb_logo_front"
         android:supportsRtl="true"
         android:theme="@style/Theme.MyApplication">
         <activity
@@ -35,6 +35,18 @@
 
         <activity
             android:name=".SecondFragment"
+            android:exported="true"
+            android:label="@string/live"
+            android:theme="@style/Theme.MyApplication.NoActionBar">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+
+        <activity
+            android:name=".ThirdFragment"
             android:exported="true"
             android:label="@string/live"
             android:theme="@style/Theme.MyApplication.NoActionBar">
